# voxmic

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  config.json  setup.ps1  tray_app.py
.claude/commands/: build.md  release.md
crates/voxctrl/: Cargo.toml
crates/voxctrl-core/: Cargo.toml
crates/voxctrl-core/src/: audio.rs  config.rs  lib.rs  pipeline.rs  recording.rs  stt_client.rs  stt_server.rs
crates/voxctrl-core/src/action/: computer_use.rs  mod.rs  type_text.rs
crates/voxctrl-core/src/gpu/: mod.rs  zluda.rs
crates/voxctrl-core/src/models/: cache_scanner.rs  catalog.rs  consent.rs  mod.rs
crates/voxctrl-core/src/router/: llm.rs  mod.rs
crates/voxctrl-core/src/stt/: mod.rs  voxtral_http.rs
crates/voxctrl-core/src/vad/: energy.rs  mod.rs  silero.rs
crates/voxctrl-cu/: Cargo.toml
crates/voxctrl-cu-linux/: Cargo.toml
crates/voxctrl-cu-linux/src/: actions.rs  lib.rs  provider.rs  roles.rs  runtime.rs  screenshot.rs  tree_walker.rs
crates/voxctrl-cu-macos/: Cargo.toml
crates/voxctrl-cu-macos/src/: actions.rs  lib.rs  provider.rs  roles.rs  screenshot.rs  tree_walker.rs
crates/voxctrl-cu-windows/: Cargo.toml
crates/voxctrl-cu-windows/src/: actions.rs  lib.rs  provider.rs  roles.rs  screenshot.rs  tree_walker.rs
crates/voxctrl-cu/src/: actions.rs  agent.rs  executor.rs  lib.rs  mock_provider.rs  prompt.rs  provider.rs  screenshot.rs  tree.rs
crates/voxctrl-stt/: Cargo.toml
crates/voxctrl-stt/examples/: test_voxtral.rs  test_whisper.rs
crates/voxctrl-stt/src/: lib.rs  voxtral_native.rs  whisper_cpp.rs  whisper_native.rs
crates/voxctrl/src/: hotkey.rs  main.rs  tray.rs  tui.rs
crates/voxctrl/src/ui/: mod.rs  model_table.rs
lore/: 20260222-1555-voxctrl-rust-crossplatform-design.md  20260222-1700-voxctrl-rust-implementation.md  20260222-1800-voxctrl-msi-installer.md  20260222-2030-feat-test-build-windows-plan.md  20260222-2100-nsis-windows-installer.md  20260222-research-sota-mic-desktop-llm.md  20260222-voxctrl-pluggable-pipeline-design.md  20260223-0445-harden-computer-use-crates.md  20260223-1240-harden-workspace-split.md  20260223-1513-harden-gpu-zluda.md  20260223-1600-harden-pcm-pipeline.md  20260223-2035-harden-testbed-latency.md  20260223-2200-harden-whisper-native.md  20260223-2311-harden-whisper-degradation-r2.md  20260223-computer-use-4crate-architecture.md  20260223-cu-test-tab-dual-hotkeys.md  20260223-feat-gui-model-dir-picker.md  20260223-feat-settings-auto-save-plan.md  20260223-feat-settings-ui-sections-plan.md  20260223-feat-testbed-latency-plan.md  20260223-feat-zluda-acceleration-plan.md  20260223-feed-raw-pcm-eliminate-temp-wav.md  20260223-fix-hotkey-registration-plan.md  20260223-fix-stt-test-connection-plan.md  20260223-fix-whisper-degradation-r2-plan.md  20260223-refactor-split-build-targets-plan.md  20260223-test-tab-settings.md  20260223-wire-download-delete-buttons.md  20260224-1300-harden-resumable-downloads.md
patches/voxtral-mini-realtime/: Cargo.toml
patches/voxtral-mini-realtime/src/: hub.rs  lib.rs  main.rs  profiling.rs  test_utils.rs
patches/voxtral-mini-realtime/src/audio/: chunk.rs  io.rs  mel.rs  mod.rs  pad.rs  resample.rs
patches/voxtral-mini-realtime/src/gguf/: loader.rs  mod.rs  model.rs  op.rs  reader.rs  shader.wgsl  shader_naive.wgsl  tensor.rs  tests.rs
patches/voxtral-mini-realtime/src/models/: adapter.rs  config.rs  encoder.rs  loader.rs  mod.rs  time_embedding.rs  voxtral.rs  weights.rs
patches/voxtral-mini-realtime/src/models/layers/: attention.rs  conv.rs  decoder_layer.rs  encoder_layer.rs  kv_cache.rs  masking.rs  mod.rs  rms_norm.rs  rope.rs  swiglu.rs
patches/voxtral-mini-realtime/src/tokenizer/: mod.rs
patches/voxtral-mini-realtime/src/web/: bindings.rs  mod.rs
src/: config.rs  hotkey.rs  main.rs  pipeline.rs  stt_client.rs  stt_server.rs
src/models/: cache_scanner.rs  catalog.rs  mod.rs
src/stt/: mod.rs  voxtral_native.rs  whisper_native.rs
src/ui/: model_table.rs
voxctrl/: .gitignore  Cargo.toml  installer.nsi
voxctrl/src/: audio.rs  config.rs  hotkey.rs  main.rs  pipeline.rs  tray.rs
voxctrl/src/models/: cache_scanner.rs  catalog.rs  consent.rs  downloader.rs  mod.rs
voxctrl/src/router/: llm.rs  mod.rs  passthrough.rs
voxctrl/src/stt/: mod.rs  voxtral_http.rs  voxtral_native.rs  whisper_cpp.rs  whisper_native.rs
voxctrl/src/ui/: mod.rs  model_table.rs
voxctrl/src/vad/: energy.rs  mod.rs  silero.rs
voxctrl/wix/: main.wxs
