[package]
name = "voxctrl"
version = "0.2.0"
edition = "2021"
description = "Pluggable voice-to-action pipeline — mic → VAD → STT → router → action"

[features]
default = ["stt-voxtral-http", "vad-energy", "gui", "tui"]

# STT backends
stt-voxtral-http   = ["dep:ureq"]
stt-whisper-cpp    = ["dep:whisper-rs"]
stt-whisper-native  = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:hf-hub", "dep:tokenizers"]
stt-voxtral-native  = ["dep:voxtral-mini-realtime"]

# VAD
vad-energy = []
vad-silero = ["dep:ort"]

# Router
router-llm = ["stt-voxtral-http"]

# Action
action-computer-use = []

# GPU acceleration (opt-in, cross-cutting)
cuda = []

# Model manager UI + consent dialog
consent-dialog = ["dep:rfd"]

# UI modes
gui = ["dep:tray-icon", "dep:global-hotkey", "dep:winit", "dep:muda", "dep:eframe", "dep:egui", "dep:rfd"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
# Core (always included)
anyhow     = "1"
log        = "0.4"
env_logger = "0.11"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile   = "3"
hound      = "3.5"

# GUI: Tray + menu + hotkey (Tauri ecosystem)
tray-icon     = { version = "0.19", optional = true }
global-hotkey = { version = "0.6", optional = true }
winit         = { version = "0.30", optional = true }
muda          = { version = "0.15", optional = true }

# GUI: Model manager
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow"], optional = true }
egui   = { version = "0.30", optional = true }

# TUI
ratatui   = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Audio capture
cpal = "0.15"

# Text injection
enigo = "0.2"

# STT: voxtral-http (optional, default)
ureq = { version = "2", features = ["json"], optional = true }

# STT: whisper-cpp (optional)
whisper-rs = { version = "0.15", optional = true }

# STT: candle native (optional)
candle-core         = { version = "0.8", optional = true }
candle-nn           = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub              = { version = "0.3", optional = true }
tokenizers          = { version = "0.20", optional = true }

# STT: voxtral-native (optional) — pure Rust Voxtral via Burn ML framework
voxtral-mini-realtime = { git = "https://github.com/TrevorS/voxtral-mini-realtime-rs", default-features = false, features = ["hub", "native-tokenizer", "wgpu"], optional = true }

# VAD: silero (optional)
ort = { version = "2.0.0-rc.9", optional = true }

# Model management
dirs = "5"
rfd = { version = "0.15", optional = true }
