[workspace]
resolver = "2"
members = [
    "crates/voxctrl-core",
    "crates/voxctrl-stt",
    "crates/voxctrl-cu",
    "crates/voxctrl-cu-windows",
    "crates/voxctrl-cu-macos",
    "crates/voxctrl-cu-linux",
    "crates/voxctrl",
]

[patch."https://github.com/TrevorS/voxtral-mini-realtime-rs"]
voxtral-mini-realtime = { path = "patches/voxtral-mini-realtime" }
