[package]
name = "voxctrl"
version = "0.2.0"
edition = "2021"
description = "Pluggable voice-to-action pipeline — mic → VAD → STT → router → action"

[features]
default = ["stt-voxtral-http", "vad-energy"]

# STT backends
stt-voxtral-http   = ["dep:ureq"]
stt-whisper-cpp    = ["dep:whisper-rs"]
stt-whisper-native  = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:hf-hub", "dep:tokenizers"]
stt-voxtral-native  = ["dep:voxtral-mini-realtime"]

# VAD
vad-energy = []
vad-silero = ["dep:ort"]

# Router
router-llm = ["stt-voxtral-http"]

# Action
action-computer-use = []

# GPU acceleration (opt-in, cross-cutting)
cuda = []

# Model manager UI + consent dialog
consent-dialog = ["dep:rfd"]
ui-model-manager = ["dep:eframe", "dep:egui"]

[dependencies]
# Core (always included)
anyhow     = "1"
log        = "0.4"
env_logger = "0.11"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile   = "3"
hound      = "3.5"

# Tray + menu + hotkey (Tauri ecosystem)
tray-icon     = "0.19"
global-hotkey = "0.6"
winit         = "0.30"
muda          = "0.15"

# Audio capture
cpal = "0.15"

# Text injection
enigo = "0.2"

# STT: voxtral-http (optional, default)
ureq = { version = "2", features = ["json"], optional = true }

# STT: whisper-cpp (optional)
whisper-rs = { version = "0.15", optional = true }

# STT: candle native (optional)
candle-core         = { version = "0.8", optional = true }
candle-nn           = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub              = { version = "0.3", optional = true }
tokenizers          = { version = "0.20", optional = true }

# STT: voxtral-native (optional) — pure Rust Voxtral via Burn ML framework
voxtral-mini-realtime = { git = "https://github.com/TrevorS/voxtral-mini-realtime-rs", default-features = false, features = ["hub", "native-tokenizer", "wgpu"], optional = true }

# VAD: silero (optional)
ort = { version = "2.0.0-rc.9", optional = true }

# Model management
dirs = "5"
rfd = { version = "0.15", optional = true }

# UI — Model manager (optional)
eframe = { version = "0.30", optional = true, default-features = false, features = ["default_fonts", "glow"] }
egui   = { version = "0.30", optional = true }
