[package]
name = "voxctrl-core"
version = "0.2.0"
edition = "2021"
description = "Core library — traits, config, pipeline, audio, models, lightweight backends"

[features]
default = ["stt-voxtral-http", "vad-energy"]

# STT backends (lightweight only — heavy ML backends live in voxctrl-stt)
stt-voxtral-http = ["dep:ureq"]

# VAD
vad-energy = []
vad-silero = ["dep:ort"]

# Router
router-llm = ["stt-voxtral-http"]

# GPU acceleration (opt-in, cross-cutting)
cuda = []

# ZLUDA DLL management (AMD GPU support via CUDA emulation)
zluda = ["dep:ureq", "dep:zip"]

# Model manager consent dialog
consent-dialog = ["dep:rfd"]

[dependencies]
# Core (always included)
anyhow     = "1"
log        = "0.4"
env_logger = "0.11"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile   = "3"
hound      = "3.5"

# Audio capture
cpal = "0.15"

# Text injection
enigo = "0.2"

# HTTP client (optional — used by stt-voxtral-http and zluda)
ureq = { version = "2", features = ["json"], optional = true }

# VAD: silero (optional)
ort = { version = "2.0.0-rc.9", optional = true }

# IPC: named pipe between Settings subprocess and main app
interprocess = "2"

# Model management
dirs = "5"
rfd = { version = "0.15", optional = true }
# ZLUDA zip extraction (optional)
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
