[package]
name = "voxctrl-cu-windows"
version = "0.2.0"
edition = "2021"
description = "Computer-use — Windows UI Automation provider"

[target.'cfg(windows)'.dependencies]
uiautomation = "0.24"

[dependencies]
voxctrl-cu = { path = "../voxctrl-cu" }
voxctrl-core = { path = "../voxctrl-core", default-features = false }
anyhow = "1"
log = "0.4"
serde_json = "1"
