[package]
name = "voxctrl-cu"
version = "0.2.0"
edition = "2021"
description = "Computer-use — cross-platform accessibility abstraction + LLM agent loop"

[dependencies]
voxctrl-core = { path = "../voxctrl-core", default-features = false }

anyhow     = "1"
log        = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
ureq       = { version = "2", features = ["json"] }
base64     = "0.22"
