[package]
name = "voxctrl"
version = "0.2.0"
edition = "2021"
description = "Pluggable voice-to-action pipeline — mic → VAD → STT → router → action"

[features]
default = ["stt-voxtral-http", "stt-voxtral-native", "stt-whisper-native", "vad-energy", "gui", "tui"]

# STT backends — forwarded to sub-crates
stt-voxtral-http    = ["voxctrl-core/stt-voxtral-http"]
stt-whisper-cpp     = ["voxctrl-stt/stt-whisper-cpp"]
stt-whisper-native  = ["voxctrl-stt/stt-whisper-native"]
stt-voxtral-native  = ["voxctrl-stt/stt-voxtral-native"]

# VAD — forwarded to core
vad-energy = ["voxctrl-core/vad-energy"]
vad-silero = ["voxctrl-core/vad-silero"]

# Router — forwarded to core
router-llm = ["voxctrl-core/router-llm"]

# Action — forwarded to core
action-computer-use = ["voxctrl-core/action-computer-use"]

# GPU acceleration (opt-in, cross-cutting)
cuda = ["voxctrl-core/cuda", "voxctrl-stt/cuda"]

# Model manager consent dialog — forwarded to core
consent-dialog = ["voxctrl-core/consent-dialog"]

# UI modes (local to binary crate)
gui = ["dep:tray-icon", "dep:global-hotkey", "dep:winit", "dep:muda", "dep:eframe", "dep:egui", "dep:egui_extras", "dep:ureq", "dep:rfd"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
voxctrl-core = { path = "../voxctrl-core", default-features = false }
voxctrl-stt  = { path = "../voxctrl-stt", default-features = false }

anyhow     = "1"
log        = "0.4"
env_logger = "0.11"
tempfile   = "3"
hound      = "3.5"

# Audio (needed for cpal::Stream type in main)
cpal = "0.15"

# GUI: Tray + menu + hotkey (Tauri ecosystem)
tray-icon     = { version = "0.19", optional = true }
global-hotkey = { version = "0.6", optional = true }
winit         = { version = "0.30", optional = true }
muda          = { version = "0.15", optional = true }

# GUI: Model manager
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow"], optional = true }
egui   = { version = "0.30", optional = true }
egui_extras = { version = "0.30", optional = true }

# GUI: HTTP client for STT test + file dialog
ureq = { version = "2", features = ["json"], optional = true }
rfd  = { version = "0.15", optional = true }

# TUI
ratatui   = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Model management (for dirs in UI)
dirs = "5"
